--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "lib/src/main.js",
   "scripts": {
-    "lint": "tslint 'src/**/*.ts'",
+    "lint": "tslint 'src/**/*.ts' && tslint 'src/**/*.tsx'",
     "test": "NODE_ENV=test mocha lib/tests/index.js",
     "start": "NODE_ENV=dev webpack-dev-server -d --colors --hot --inline --progress --port 8080",
     "bundle": "NODE_ENV=production webpack -p --colors --progress",
